# kiron-work-os

./: .env.production  .gitignore  CLAUDE.md  INTEGRATION_SPEC.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: desktop-client.yml
.lovable/: plan.md
backend/: .env.example  .gitignore  requirements.txt  run-dev.ps1
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_chat_realtime.py  0003_password_reset.py  0004_employment_lifecycle.py  0005_force_password_change.py  0006_working_hours.py  0007_holidays.py  0008_saturday_pattern.py  0009_company_profile.py  0010_contacts_and_company_expansion.py  0011_drop_managing_ca.py  0012_leadership_list.py  0013_message_soft_delete.py  0014_followup_access.py  0015_field_work_status.py  0016_hides_and_calls.py  0017_call_kind_and_contact.py  0018_reminder_notification_type.py  0019_teams.py  0020_credentials_vault.py  0021_projects_expansion.py  0022_leave_balances.py  0023_documents.py  0024_assets.py  0025_vendors.py  0026_compliance.py  0027_expenses.py  0028_salary.py  0029_company_ledger.py  0030_comp_off_earning.py  0031_comp_off_repay_by.py  0032_attendance_permissions.py  0033_offices_geo_idle.py  0034_contacts_linkedin.py  0035_payroll_pf_esi_pt.py  0036_tax_slabs.py  0037_attendance_desktop_fields.py  0038_project_chat.py
backend/app/: authz.py  config.py  create_db.py  db.py  deps.py  email.py  ledger_link.py  main.py  notifications_email.py  scheduler.py  security.py  seed.py  util.py  vault_crypto.py
backend/app/routers/: approvals.py  assets.py  attendance.py  attendance_permissions.py  auth.py  bank_accounts.py  bootstrap.py  calls.py  chat.py  companies.py  compliance.py  contacts.py  conversations.py  documents.py  expenses.py  files.py  holidays.py  leave.py  leave_balances.py  ledger.py  notifications.py  offices.py  projects.py  pt_slabs.py  salary.py  tasks.py  tax_slabs.py  teams.py  users.py  vault.py  vendors.py  ws.py
backend/sql/: hard_delete_demo_accounts.sql  schema.sql
backend/tests/: test_auth_tasks.py  test_p2_endpoints.py
deploy/: CPANEL.md  DEPLOY.md  ROLLOUT_CHECKLIST.md  apache-desktop.conf.snippet  backend.env.example  deploy-frontend.sh  kiron-api.service  kiron-vhost.conf  nginx-kiron.conf  setup-backend.sh  setup-db.sh
desktop-client/: .gitignore  README.md  SIGNING.md  package.json
desktop-client/scripts/: latest.json.template
desktop-client/src/: index.html  sign-in.js  style.css
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/capabilities/: default.json
desktop-client/src-tauri/icons/: README.md
desktop-client/src-tauri/src/: activity.rs  api.rs  commands.rs  config.rs  keychain.rs  lib.rs  main.rs  tracker.rs  tray.rs  updater.rs
docs/: OFFLINE.md
scripts/: backfill_ledger.py  onboard_employees.py
src/: App.tsx  index.css
src/components/: AppShell.tsx  Charts.tsx  ChatDock.tsx  CompanyBadge.tsx  PageHeader.tsx  ProtectedRoute.tsx  StatCard.tsx  StatusBadges.tsx  SyncIndicator.tsx  UnreadChatTile.tsx  UserAvatar.tsx
src/components/attachments/: AttachmentList.tsx  AttachmentUploader.tsx
src/components/attendance/: GrantPermissionDialog.tsx  HoursSummaryCard.tsx  RequestPermissionDialog.tsx
src/components/companies/: BankAccountsSection.tsx  CompanyDialog.tsx  OfficesTab.tsx
src/components/contacts/: ContactDialog.tsx  ContactsImportDialog.tsx
src/components/mail/: ComposeDialog.tsx  LinkEntityDialog.tsx  LinkedEmails.tsx  MailboxList.tsx  MessageDetail.tsx  MessageList.tsx
src/components/people/: UserDialog.tsx
src/hooks/: useIdleDetector.ts  useUnreadChatCount.ts  useUnreadMailCount.ts
src/lib/: api.ts  auth.tsx  dataStore.tsx  desktopNotifications.ts  mappers.ts  pwa.tsx  ws.ts
src/pages/: Approvals.tsx  AssetDetail.tsx  Assets.tsx  Attendance.tsx  ChangePassword.tsx  Chat.tsx  Compliance.tsx  Contacts.tsx  Dashboard.tsx  DocumentDetail.tsx  Documents.tsx  Expenses.tsx  FounderOffice.tsx  Index.tsx  Interns.tsx  Leave.tsx  Ledger.tsx  Login.tsx  Mail.tsx  MyWork.tsx  Notifications.tsx  PayslipView.tsx  People.tsx  PersonProfile.tsx  ProjectDetail.tsx  Projects.tsx  Reports.tsx  ResetPassword.tsx  Salary.tsx  Settings.tsx  Tasks.tsx  TeamAttendance.tsx  TeamDetail.tsx  Teams.tsx  UpdatePassword.tsx  Vault.tsx  VaultDetail.tsx  VendorDetail.tsx  Vendors.tsx
src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 20260421111009_c114dbb9-672e-4f6f-a0e2-b719e08c1a0e.sql  20260421111038_5643c03c-14f6-49ab-b2bc-e961284b3e49.sql  20260421111440_f284f993-74cc-49fb-b222-e71fc592b1e9.sql  20260424182327_64a6634d-2bc8-450f-952e-667f51a8d2c8.sql  20260516122610_e61d2f05-05aa-4f3d-8c37-4bee4cd9d62f.sql  20260516122649_de48a828-ef4a-49ac-9926-910716fbe01e.sql  20260519080332_d232e2e9-9554-414c-a547-321fb6318c63.sql  20260521000000_realtime_messages.sql  20260525120000_realtime_notifs_approvals.sql
(+32 files in other folders)
